--- a/index.html
+++ b/index.html
@@ -12,82 +12,94 @@
 <style>
         /* RESET Y BASE PARA TEMA OSCURO */
         html, body {
-            background: #18181b !important;
-            color: #f3f4f6 !important;
+            background: #121212 !important;
+            color: #EAEAEA !important;
             font-family: 'Inter', sans-serif;
         }
         header, footer, .bg-white, .scrollable-sidebar, .activity-card, .mobile-menu, .edit-day-form, .rounded-3xl, .rounded-b-3xl, .rounded-t-3xl, .rounded-xl {
-            background: #23232a !important;
-            color: #f3f4f6 !important;
+            background: #1E1E1E !important;
+            color: #EAEAEA !important;
         }
         .border, .border-neutral-200, .border-blue-200, .border-neutral-300 {
-            border-color: #27272a !important;
+            border-color: #333 !important;
+            border-width: 1px !important;
         }
         .shadow-xl, .shadow-lg, .shadow-inner, .shadow-sm {
-            box-shadow: 0 2px 16px rgba(0,0,0,0.5) !important;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.25) !important;
         }
         .part-title {
             color: #a5b4fc !important;
-            border-bottom: 1px solid #27272a !important;
+            border-bottom: 1px solid #333 !important;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
         }
         .activity-card {
-            background: #23232a !important;
-            border: 2px solid #6366f1 !important;
-            color: #f3f4f6 !important;
-            box-shadow: 0 4px 24px 0 rgba(99,102,241,0.10) !important;
+            background: #1E1E1E !important;
+            border: none !important;
+            color: #EAEAEA !important;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.25) !important;
             border-radius: 1.2rem !important;
-            padding: 1.5rem 1.2rem !important;
+            padding: 2rem 1.2rem !important;
             margin-bottom: 1.2rem !important;
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 0.7rem;
             max-width: 340px !important;
             width: 96%;
-            margin: 0 !important;
+            margin: 0 auto 1.2rem auto !important;
             flex: 1 1 280px;
-            transition: background 0.2s, border 0.2s, color 0.2s, box-shadow 0.2s;
+            transition: background 0.2s, box-shadow 0.2s;
         }
         .activity-card:hover, .activity-card:focus {
-            background: #353569 !important;
-            border-color: #facc15 !important;
-            color: #fff !important;
+            background: #23234a !important;
             box-shadow: 0 8px 32px 0 rgba(250,204,21,0.10) !important;
         }
-        .activity-card .calendar-day-number {
-            font-size: 2.1rem !important;
-            font-weight: bold;
+        .calendar-day-number {
+            font-size: 2.6rem !important;
+            font-weight: 800;
             color: #facc15 !important;
             margin-bottom: 0.2rem;
+            text-align: center;
+            letter-spacing: 0.02em;
         }
         .activity-card .text-sm {
             color: #a5b4fc !important;
             font-size: 1.1rem !important;
             margin-bottom: 0.2rem;
+            font-weight: 600;
+            text-align: center;
         }
         .activity-card .text-base {
-            color: #fff !important;
+            color: #EAEAEA !important;
             font-size: 1.15rem !important;
             font-weight: 700;
             margin-bottom: 0.2rem;
+            text-align: center;
         }
         .activity-card .calendar-day-activities {
             color: #a5b4fc !important;
             font-size: 1rem !important;
             margin-bottom: 0.1rem;
+            text-align: center;
         }
         .no-activities-message {
             color: #a1a1aa !important;
+            text-align: center;
         }
         .view-toggle-button, .edit-button, .save-button, .cancel-button {
             background: #4f46e5 !important;
-            color: #f3f4f6 !important;
+            color: #EAEAEA !important;
             border: none !important;
             box-shadow: 0 4px 8px rgba(79,70,229,0.15) !important;
-            transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
+            font-weight: 600;
+            border-radius: 1rem !important;
+            padding: 1rem 2rem !important;
+            font-size: 1.1rem !important;
+            transition: background 0.2s, box-shadow 0.2s, border 0.2s, color 0.2s;
         }
         .view-toggle-button:hover, .edit-button:hover, .save-button:hover, .cancel-button:hover {
             background: #6366f1 !important;
-            transform: translateY(-2px) scale(1.03);
+            color: #facc15 !important;
             box-shadow: 0 6px 16px rgba(99,102,241,0.25) !important;
         }
         .edit-button, .save-button {
@@ -95,6 +107,7 @@
         }
         .edit-button:hover, .save-button:hover {
             background: #059669 !important;
+            color: #fff !important;
         }
         .cancel-button {
             background: #ef4444 !important;
@@ -104,19 +117,86 @@
         }
         .form-input, .form-textarea {
             background: #18181b !important;
-            color: #f3f4f6 !important;
-            border: 1px solid #27272a !important;
+            color: #EAEAEA !important;
+            border: 1px solid #333 !important;
+            border-radius: 0.7rem !important;
+            font-size: 1rem;
+            padding: 0.7rem 1rem;
         }
         .form-input:focus, .form-textarea:focus {
             outline: 2px solid #6366f1 !important;
             background: #23232a !important;
         }
+        .form-textarea {
+            min-height: 90px;
+            resize: vertical;
+        }
         /* Menú hamburguesa e overlay en oscuro */
         .mobile-menu {
-            background: #23232a !important;
+            background: #1E1E1E !important;
+            position: fixed !important;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+            padding: 0;
+            border-radius: 0 !important;
+            box-shadow: none !important;
+            transition: transform 0.3s cubic-bezier(.4,0,.2,1), opacity 0.3s;
         }
         .mobile-menu-overlay {
             background: rgba(24,24,27,0.7) !important;
+        }
+        .mobile-menu-content {
+            flex: 1 1 0;
+            overflow-y: auto;
+            padding: 2.5rem 1rem 1rem 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+        .mobile-menu-actions {
+            position: fixed;
+            bottom: 0; left: 0; width: 100vw;
+            background: #1E1E1E;
+            display: flex;
+            flex-direction: row;
+            gap: 1rem;
+            padding: 1rem;
+            z-index: 1001;
+            box-shadow: 0 -2px 16px rgba(0,0,0,0.15);
+        }
+        .mobile-menu-days {
+            flex: 1 1 0;
+            overflow-y: auto;
+            margin-bottom: 4.5rem;
+        }
+        .mobile-menu-days .part-title {
+            margin-top: 1.5rem;
+            margin-bottom: 0.5rem;
+            font-size: 1.2rem;
+            padding-left: 0.5rem;
+        }
+        .mobile-menu-days button.day-button {
+            width: 100%;
+            margin-bottom: 0.5rem;
+            font-size: 1.1rem;
+            padding: 0.9rem 1rem;
+            border-radius: 0.75rem;
+        }
+        #close-mobile-menu {
+            position: absolute;
+            top: 1.2rem;
+            right: 1.2rem;
+            z-index: 101;
+            background: none;
+            border: none;
+            padding: 0.5rem;
+        }
+        h1 {
+            font-size: 2rem !important;
+            line-height: 2.4rem !important;
+            padding: 0.5rem 0 !important;
         }
         /* Animaciones suaves */
         .mobile-menu, .activity-card, .view-toggle-button, .edit-button, .save-button, .cancel-button {
@@ -132,12 +212,27 @@
         }
         /* Mejor contraste para navegación */
         .day-button {
-            background: #23232a !important;
-            color: #f3f4f6 !important;
-            border: 1px solid #27272a !important;
+            background: #1E1E1E !important;
+            color: #EAEAEA !important;
+            border: 1px solid #333 !important;
+            font-weight: 600 !important;
+            box-shadow: 0 2px 8px 0 rgba(99,102,241,0.10) !important;
+            transition: background 0.2s, color 0.2s, border 0.2s, box-shadow 0.2s;
+            padding: 1rem 1.2rem !important;
+            border-radius: 0.9rem !important;
+            font-size: 1.1rem !important;
         }
-        .day-button:hover {
-            background: #27272a !important;
+        .day-button:hover, .day-button:focus {
+            background: #6366f1 !important;
+            color: #fff !important;
+            border-color: #facc15 !important;
+            box-shadow: 0 4px 16px 0 rgba(250,204,21,0.15) !important;
+        }
+        .day-button.active {
+            background: #facc15 !important;
+            color: #23232a !important;
+            border-color: #facc15 !important;
+            box-shadow: 0 6px 24px 0 rgba(250,204,21,0.18) !important;
         }
         /* Scrollbar oscuro */
         ::-webkit-scrollbar {
@@ -153,8 +248,8 @@
             box-sizing: border-box;
         }
         main {
-            padding: 1rem !important;
-            gap: 1rem !important;
+            padding: 1.2rem !important;
+            gap: 1.2rem !important;
         }
         @media (max-width: 1024px) {
             main {
@@ -214,7 +309,7 @@
                 height: 100vh !important;
                 border-radius: 0 !important;
                 box-shadow: none !important;
-                padding: 2rem 1rem 1rem 1rem !important;
+                padding: 0 !important;
                 display: flex;
                 flex-direction: column;
                 gap: 0;
@@ -228,15 +323,19 @@
             }
             .mobile-menu-actions {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 gap: 1rem;
-                margin-bottom: 2rem;
+                margin-bottom: 0;
+                position: fixed;
+                bottom: 0; left: 0; width: 100vw;
+                background: #1E1E1E;
+                z-index: 1001;
+                box-shadow: 0 -2px 16px rgba(0,0,0,0.15);
             }
             .mobile-menu-days {
                 flex: 1 1 0;
                 overflow-y: auto;
-                background: none;
-                padding-bottom: 1rem;
+                margin-bottom: 4.5rem;
             }
             .mobile-menu-days .part-title {
                 margin-top: 1.5rem;
@@ -282,8 +381,16 @@
         }
         /* --- FIN RESPONSIVIDAD --- */
         /* --- ARREGLO DE COLORES DE TEXTO Y SVG --- */
-        h1, h2, h3, h4, h5, h6, label, .text-gray-800, .text-gray-900, .text-gray-700, .text-gray-600, .text-blue-600, .text-blue-800, .text-green-600, .text-green-500, .text-indigo-700, .text-gray-500 {
-            color: #f3f4f6 !important;
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Inter', sans-serif;
+            font-weight: 700;
+            color: #EAEAEA !important;
+        }
+        h2, h3 {
+            font-weight: 600;
+        }
+        label, .text-gray-800, .text-gray-900, .text-gray-700, .text-gray-600, .text-blue-600, .text-blue-800, .text-green-600, .text-green-500, .text-indigo-700, .text-gray-500 {
+            color: #EAEAEA !important;
         }
         .text-blue-500, .text-green-500, .text-indigo-700, .text-blue-600, .text-blue-800, .text-green-600, .text-green-500, .text-indigo-700 {
             color: #818cf8 !important;
@@ -322,12 +429,15 @@
         }
         /* Contraste para los botones de los días */
         .day-button {
-            background: #23232a !important;
-            color: #f3f4f6 !important;
-            border: 2px solid #6366f1 !important;
+            background: #1E1E1E !important;
+            color: #EAEAEA !important;
+            border: 1px solid #333 !important;
             font-weight: 600 !important;
             box-shadow: 0 2px 8px 0 rgba(99,102,241,0.10) !important;
             transition: background 0.2s, color 0.2s, border 0.2s, box-shadow 0.2s;
+            padding: 1rem 1.2rem !important;
+            border-radius: 0.9rem !important;
+            font-size: 1.1rem !important;
         }
         .day-button:hover, .day-button:focus {
             background: #6366f1 !important;
@@ -360,7 +470,7 @@
             margin: 0 auto !important;
             padding: 0 0 1.5rem 0 !important;
             box-sizing: border-box;
-            gap: 1.5rem !important;
+            gap: 1.2rem !important;
         }
         .activity-card {
             border-radius: 1.2rem !important;
@@ -399,6 +509,65 @@
                 width: 99vw !important;
                 padding: 0.7rem 0.1rem !important;
             }
+        }
+        /* Barra de progreso */
+        #progress-container {
+            width: 100%;
+            height: 8px;
+            background: #23232a;
+            border-radius: 6px;
+            margin: 1.2rem 0 1.5rem 0;
+            overflow: hidden;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+        }
+        #progress-bar {
+            height: 100%;
+            background: linear-gradient(90deg, #4f46e5 0%, #facc15 100%);
+            border-radius: 6px;
+            transition: width 0.4s cubic-bezier(.4,0,.2,1);
+            width: 0%;
+        }
+        /* Toasts */
+        #toast-container {
+            position: fixed;
+            bottom: 2.5rem;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2000;
+            display: flex;
+            flex-direction: column;
+            gap: 0.7rem;
+            pointer-events: none;
+        }
+        .toast {
+            background: #23232a;
+            color: #EAEAEA;
+            padding: 1rem 2rem;
+            border-radius: 1rem;
+            font-size: 1.1rem;
+            font-weight: 500;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.25);
+            opacity: 0;
+            transform: translateY(20px) scale(0.98);
+            animation: toast-in 0.4s forwards, toast-out 0.4s 2.6s forwards;
+        }
+        @keyframes toast-in {
+            to { opacity: 1; transform: translateY(0) scale(1); }
+        }
+        @keyframes toast-out {
+            to { opacity: 0; transform: translateY(20px) scale(0.98); }
+        }
+        /* Transiciones entre vistas */
+        .fade-scale {
+            opacity: 0;
+            transform: scale(0.98);
+            transition: opacity 0.3s, transform 0.3s;
+            pointer-events: none;
+        }
+        .fade-scale.active {
+            opacity: 1;
+            transform: scale(1);
+            pointer-events: auto;
         }
     </style>
 </head>
