--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
-            --bg-primary: #121212;
-            --bg-secondary: #1E1E1E;
-            --text-primary: #EAEAEA;
-            --text-secondary: #a1a1aa;
-            --accent-indigo: #4f46e5;
-            --accent-indigo-hover: #6366f1;
-            --accent-yellow: #facc15;
-            --border-color: #333;
+            --bg-primary: #1A1A1A;
+            --bg-secondary: #2E2E2E;
+            --text-primary: #D3D3D3;
+            --text-secondary: #b0b0b0;
+            --accent-indigo: #8A4AF3;
+            --accent-indigo-hover: #a97ffb;
+            --accent-yellow: #8A4AF3;
+            --border-color: #2E2E2E;
         }
         html, body {
             background-color: var(--bg-primary) !important;
@@ -42,7 +42,7 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25) !important;
         }
         #progress-container {
-            background-color: #2a2a2e;
+            background-color: #232029;
             border-radius: 99px;
             overflow: hidden;
             height: 10px;
@@ -123,7 +123,7 @@
         }
         #calendar-view .activity-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+            box-shadow: 0 8px 25px rgba(138,74,243,0.15);
         }
         #calendar-view .day-number {
             font-size: 2rem;
