--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             color: var(--text-secondary);
         }
         #calendar-view .activity-card {
-            background-color: rgba(138,74,243,0.10); /* violeta translúcido para mayor contraste */
+            background-color: #4A4A4A;
             padding: 1.25rem;
             border-radius: 1rem;
             text-align: center;
