--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
                 width: 75%;
             }
         }
+        #edit-day-form {
+            background-color: rgba(138,74,243,0.18);
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-100">
