--- a/index.html
+++ b/index.html
@@ -243,6 +243,17 @@
                 width: 75%;
             }
         }
+        .primary-button.bg-green-600,
+        #edit-day-button,
+        #mobile-edit-day-button {
+            background-color: #FF7F50 !important;
+            border: none;
+        }
+        .primary-button.bg-green-600:hover,
+        #edit-day-button:hover,
+        #mobile-edit-day-button:hover {
+            background-color: #ff9a76 !important;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-100">
