--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
         .primary-button.bg-green-600,
         #edit-day-button,
         #mobile-edit-day-button {
-            background-color: #39FF14 !important;
+            background-color: #00E0FF !important;
             border: none;
         }
         .primary-button.bg-green-600:hover,
         #edit-day-button:hover,
         #mobile-edit-day-button:hover {
-            background-color: #7CFF6B !important;
+            background-color: #5CF1FF !important;
         }
     </style>
 </head>
