--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         </section>
     </main>
     <footer class="text-center p-4 mt-4 text-sm text-gray-400 component-bg">
-        <p>&copy; 2025 Interrail. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Samuel Diaz. Todos los derechos reservados.</p>
     </footer>
     <div id="toast-container"></div>
     <script>
